[package]
name = "firehose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bisky = { path = "../../" }
cbor4ii = { version = "0.3.1", features = ["serde"] }
ciborium = "0.2.0"
futures = "0.3.28"
serde_cbor = "0.11.2"
tokio = { version = "1.28.0", features = ["full"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
url = "2.3.1"
